--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+  
+
+  <head>
+
+  <title>FOX部队秘密资料</title>
+
+  </head>
 <body>
-<h5>Hello World</h5>
+
+<h1>Hello World</h1>
 <p>It's not the time to show u the magic</p>
 </body>
 </html>
