--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
   <head>
 
-  <title>FOX部队秘密资料</title>
+  <title>Secret Project</title>
 
   </head>
-<body>
+<body align="center">
 
 <h1>Hello World</h1>
 <p>It's not the time to show u the magic</p>
