--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 <body align="center">
 
-<h1>Hello World</h1>
+<h1>Secret Project ---------------- August Capsule</h1>
 <p>It's not the time to show u the magic</p>
+  <p>All u need to do is waitting :)</p>
 </body>
 </html>
