--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body align="center">
 <br/><br/><br/><br/><br/>
-<h1>Secret Project ---------------- August Capsule</h1>
+<h1><font size="10" face="arial" color="orange">Secret Project ---------------- August Capsule</font></h1>
 <p>It's not the time to show u the magic</p>
   <p>All u need to do is waitting :)</p>
 </body>
