--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body align="center">
 <br/><br/><br/><br/><br/>
 <h1><font size="10" face="arial" color="orange">Secret Project ---------------- August Capsule</font></h1>
-<p>It's not the time to show u the magic</p>
+  <br/><br/><br/><br/><br/>
+<p font size="5">It's not the time to show u the magic</p>
   <p>All u need to do is waitting :)</p>
 </body>
 </html>
