--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
 <body align="center">
 <br/><br/><br/><br/><br/>
-<h1><font size="10" face="arial">Secret Project ---------------- August Capsule</font></h1>
+<h1><font size="10" face="arial">/***********************Secret Project***********************/</font></h1>
   <br/><br/><br/><br/><br/>
-<p><font size="10" face="arial">It's not the time to show u the magic<br/>All u need to do is waitting<br/>:)</font></p>
+<p><font size="10" face="arial">It's not the time to show u the magic<br/><br/>All u need to do is waitting<br/>:)</font></p>
 
 </body>
 </html>
