--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <br/><br/><br/><br/><br/>
 <h1><font size="10" face="arial">/*******Secret Project*******/</font></h1>
   <br/><br/><br/><br/><br/>
-<p><font size="10" face="arial">It's not the time to show u the magic<br/><br/>All u need to do is waitting<br/><br/>:)</font></p>
+<p><font size="10" face="arial">It's not the time to show u the magic<br/><br/>All u need to do is waitting and listening<br/><br/>:)</font></p>
   
-  
-  <embed height="100" width="100" src="Autumn Leaves 20170417-Recording King.mp3"></embed>
+  <br/><br/>
+  <embed height="100" width="200" src="Autumn Leaves 20170417-Recording King.mp3"></embed>
 
 </body>
 </html>
