--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <p><font size="10" face="arial">It's not the time to show u the magic<br/><br/>All u need to do is waitting and listening<br/><br/>:)</font></p>
   
   <br/><br/>
-  <embed height="100" width="200" src="Autumn Leaves 20170417-Recording King.mp3"></embed>
+
+  <audio src="Autumn Leaves 20170417-Recording King.mp3" controls="controls">
+Your browser does not support the audio element.
+</audio>
 
 </body>
 </html>
